--- a/Uyg04WorkProject.UI/Views/Shared/_Layout.cshtml
+++ b/Uyg04WorkProject.UI/Views/Shared/_Layout.cshtml
@@ -133,10 +133,10 @@
                         <div class="topbar-divider d-none d-sm-block"></div>
 
                         <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
+                        <li class="nav-item dropdown no-arrow Logined">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="UserName"></span>
                                 <img class="img-profile rounded-circle"
                                      src="img/undraw_profile.svg">
                             </a>
@@ -209,7 +209,7 @@
                 <div class="modal-body">Oturum Kapatılacaktır!</div>
                 <div class="modal-footer">
                     <button class="btn btn-primary" type="button" data-dismiss="modal">İptal</button>
-                    <a class="btn btn-danger" href="login.html">Güvenli Çıkış</a>
+                    <a class="btn btn-danger" id="Logout">Güvenli Çıkış</a>
                 </div>
             </div>
         </div>
@@ -224,6 +224,7 @@
 
     <!-- Custom scripts for all pages-->
     <script src="~/sbadmin/js/sb-admin-2.min.js"></script>
+    <script src="~/js/site.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
