--- a/Uyg04WorkProject.UI/Views/Home/Works.cshtml
+++ b/Uyg04WorkProject.UI/Views/Home/Works.cshtml
@@ -11,7 +11,7 @@
                 <tr>
                     <th>SN</th>
                     <th>Başlık</th>
-                    <th>Skor</th>
+                    <th>Tamamlanma</th>
                     <th>İşlemler</th>
                 </tr>
             </thead>
